Remove some content for a good looking.

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <div class="caption">
                             <div class="caption-content">
                                 <h2>Django Article4u Blog</h2>
-                                <p class="mb-0">After months of coding, my major project, Article4u, which I created entirely on my own, has been finished. The majority of the Django principles I've learned during my life have all been applied on this lovely blog.</p>
+                                <p class="mb-0">The majority of the Django principles I've learned during my life have all been applied on this lovely blog.</p>
                             </div>
                         </div><img class="img-fluid" src="assets/img/portfolio-1.jpg">
                     </a></div>
@@ -96,7 +96,7 @@
                             <div class="caption-content">
                                 <h2>React News App</h2>
                                 <p class="mb-0">
-                                    News App provides a wide selection of news articles from various sources. While customizable newsfeeds allow you to choose your favourite topics, editor-curated feeds keep you up to date on the most recent headlines and special interest articles.
+                                    News App provides a wide selection of news articles from various sources. While customizable newsfeeds allow you to choose your favourite topics.
                                 </p>
                             </div>
                         </div><img class="img-fluid" src="assets/img/portfolio-2.jpg">
